# hmi

./: .dockerignore  .env.example  .gitignore  Cross.toml  Dockerfile  README.md  auto-imports.d.ts  bun.lockb  components.d.ts  docker-compose.yml  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: audit_bench.rs  borrow_return_bench.rs  borrow_return_stress_test.rs  common.rs  device_bench.rs  device_stress_test.rs  maintenance_bench.rs  search_bench.rs  search_stress_test.rs  shipment_bench.rs  user_bench.rs
src-tauri/benches/output/: audit_bench_output.txt  borrow_return_bench_output.txt  borrow_return_stress_test_output.txt  device_bench_output.txt  device_stress_test_output.txt  maintenance_bench_output.txt  search_bench_output.txt  search_stress_test_output.txt  shipment_bench_output.txt  user_bench_output.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: db_commands.rs  mod.rs
src-tauri/src/db/: connection.rs  mod.rs  schema.rs
src-tauri/src/db/queries/: builder.rs
src/components/: Home.vue
src/components/common/: NavigationBar.vue
src/components/device/: BorrowForm.vue  BorrowInvoice.vue  ConfirmBorrowForm.vue  ConfirmReturnForm.vue  DeviceDetail.vue  ReturnForm.vue  ReturnInvoice.vue
src/components/layout/: Sidebar.vue  (+1 more)
src/composables/: index.ts  useAuth.ts  useOneTimeQR.ts  useReceiptCache.ts  useVirtualKeyboardDetection.ts
src/hooks/: useVirtualKeyboardDetection.ts
src/layouts/: AuthLayout.vue  BorrowReturnLayout.vue  MainLayout.vue
src/router/: index.ts
src/types/: index.ts  status.ts
(+48 files in other folders)
