[package]
name = "hmi"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hmi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.44.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14.1"
postgres-types = { version = "0.2.9", features = ["derive"] }
async-trait = "0.1.87"
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
config = "0.15.9"
dotenvy = "0.15.7"
futures = "0.3.31"
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "borrow_return_bench"
harness = false

[[bench]]
name = "audit_bench"
harness = false

[[bench]]
name = "device_bench"
harness = false

[[bench]]
name = "maintenance_bench"
harness = false

[[bench]]
name = "shipment_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "user_bench"
harness = false